test/envoy-ext-proc/loadbalancer/envoy-lb/envoy.yaml


# 这里通过静态配置来配置 ext-proc


static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 9001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        text_format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% \"%RESP(X-EXTPROC-HELLO)%\" \"%RESP(CONTENT-TYPE)%\" \"%RESP(CONTENT-LENGTH)%\" %DURATION% ms\n"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/"
                          route:
#                            host_rewrite_literal: www.sina.com.cn
#                            cluster: service_envoyproxy_io
                            cluster: loadbalancer_original_dst
                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext_proc_cluster
                      failure_mode_allow: true
                      processing_mode:
                        request_header_mode: SEND #SKIP
                        response_header_mode: SEND
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: ext_proc_cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      lb_subset_config:
        fallback_policy: DEFAULT_SUBSET
        default_subset:
          stage: prod
        subset_selectors:
          - keys:
              - v
              - stage
          - keys:
              - stage
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ext_proc_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9000 # 这里配置 ext-proc
                metadata:
                  filter_metadata:
                    envoy.lb:
                      version: '1.0'
                      stage: 'prod'


    - name: loadbalancer_original_dst
      type: ORIGINAL_DST
      connect_timeout: 10s
      per_connection_buffer_limit_bytes: 32768
      lb_policy: CLUSTER_PROVIDED
      circuit_breakers:
        thresholds:
          - max_retries: 1024
      dns_lookup_family: V4_PREFERRED
      original_dst_lb_config:
        use_http_header: true
        http_header_name: x-gateway-destination-endpoint


    - name: service_envoyproxy_io
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: service_envoyproxy_io
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1 # python3 -m http.server 6677
                      port_value: 6677
#      transport_socket:
#        name: envoy.transport_sockets.tls
#        typed_config:
#          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
#          sni: www.sina.com.cn
